--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "now --prod ./build", 
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
