--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,7 @@
 {
   "short_name": "whibut",
   "name": "what have i been up to?",
-  "icons": [
-  ],
+  "icons": [],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
